<resources>
    <string name="recover_password">Recover password</string>
    <string name="red_wings_logo">Red wings </string>
    <string name="donate_process_chart">donate process chart</string>


    <string name="a">A+</string>
    <string name="ab">AB+</string>
    <string name="o">O+</string>
    <string name="az">A-</string>
    <string name="oneg">O-</string>
    <string name="apos">a+</string>
    <string name="abneg">AB-</string>
    <string name="bneg">B-</string>
    <string name="bpos">B+</string>
    <string name="select_your_blood">Select your Patient blood type</string>
    <string name="create_account">Create Account</string>
    <string name="app_name">Red Wings</string>
    <string name="red_wings">Red Wings logo</string>

    /*splash Main*/
    <string name="next">Next</string>
    <string name="skip">skip</string>
    <string name="start">GET STARTED</string>

    /*Main*/
    <string name="is_the_best_place">Is the best place to manage \n  your<Font color="#c8c7c8">Blood Donation</Font></string>
    <string name="content_des_main_img">it describes donation process</string>
    <string name="log_in">log in</string>
    <string name="create_acoount">Create An Acoount</string>

    /*splash0*/
    <string name="donation_process_img">donation process</string>
    <string name="saving_a_soul">“There is no great joy than saving \n a soul.”</string>
    <string name="opportunities_knock_the_door_sometimes_so_don_t_let_it_go_and_donate_blood">Opportunities knock the door sometimes,\n so don’t let it go and donate blood.</string>

    /*splash1*/
    <string name="donor_is_a_hero">Every Blood Donor Is A Hero</string>
    <string name="a_single_pint">A single pint can save three lives, \n  a single gesture can create a million smiles</string>
    /*splash2*/
    <string name="loctionForDonation">loction For Donation</string>
    <string name="splash2">A few drops of your blood can help a life to bloom</string>
    <string name="splash2txt">all blood banks and campaigns locations are \n located in map so it became more easier to get to \n the nearest place</string>
    /*splash3*/
    <string name="splash3">Be a Life Guard. Give blood to \n  save life.</string>
    <string name="splash3Txt">help blood banks to get their needed blood units \n and save someone\'s life</string>
    <string name="help_doctor_to_save_lifes">help doctor to save lifes</string>
    /*Sign in*/
    <string name="welcome_txt">Welcome , Start \n controlling donations</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="have_an_account">Do not have an account? sign up</string>
    <string name="email">Email address </string>

    <string name="backIcon">back_icon</string>
    /*Sign UP*/
    <string name="enterName">Full name</string>
    <string name="start_journey">Start Your Journey \n With Us</string>
    <string name="privacy_policy">By signing up you accept the Terms of \n Service and Privacy Policy.</string>
    <string name="date_of_birth">Birthday</string>
    <string name="do_have_an_account">Do have an account? Sign in</string>
    <string name="sign_up">Sign Up</string>

    /*forget password*/
    <string name="recoverPassText">Enter your email and we’ll send you \n instructions on how to reset your password.</string>
    <string name="forgotPassword">Forget password</string>

    /*check email*/
    <string name="check_email">Check Your Email</string>
    <string name="close">close</string>
    <string name="we_ve_sent_instructions">We’ve sent instructions on how to reset \n  The password (also check the Spam folder).</string>
    <string name="go_to_email">Go To Email</string>

    /*map*/
    <string name="title_activity_maps">Map</string>

    /*add request*/
    <string name="add_request">Need A Blood ?</string>
    <string name="add_reqTxt">Here you can ask our community members to donate for you by completing the form down here</string>
    <string name="which_hospital">in which hospital are you?</string>
    <string name="add_number">add number</string>
    <string name="patient_file_no">Enter patient file number</string>
    <string name="select_one_please">select one please</string>
    <string name="blood_type_needed">Blood Type needed</string>
    <string name="number_of_units">Enter number of units</string>
    <string name="hospital">Hospital</string>
    <string name="notes">Notes</string>
    <string name="add_notes">add notes</string>
    <string name="add_req">add Request</string>

    <string name="SignIn_txt">Welcome back! \n You’ve been missed</string>
    <string name="donation_history">Donation History</string>
    <string name="blood_drop">blood drop</string>
    <string name="Donation_type">Donation Type</string>
    <string name="blood_bank">Blood Bank</string>
    <string name="al_aqsa_hospital">Al-Aqsa Hospital</string>
    <string name="_13_5_2020">13/5/2020</string>
    <string name="date">date</string>
    <string name="filter">filter</string>
</resources>
