<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioOpos"
                style="@style/button"
                android:text="@string/o" />

            <RadioButton
                android:id="@+id/radioOneg"
                style="@style/button"
                android:text="@string/oneg" />

            <RadioButton
                android:id="@+id/radioApos"
                style="@style/button"
                android:text="@string/a" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioAneg"
                style="@style/button"
                android:text="@string/az" />

            <RadioButton
                android:id="@+id/radioBpos"
                style="@style/button"
                android:text="@string/bpos" />

            <RadioButton
                android:id="@+id/radioBneg"
                style="@style/button"
                android:text="@string/bneg" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioABpos"
                style="@style/button"
                android:text="@string/ab" />

            <RadioButton
                android:id="@+id/radioABneg"
                style="@style/button"
                android:text="@string/abneg" />

            <RadioButton
                android:id="@+id/radioButton6"
                style="@style/button"
                android:text="@string/apos"
                android:visibility="invisible" />
        </LinearLayout>

    </RadioGroup>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/select_your_blood"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>