<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainLayout"
  >
    <ImageButton
        android:id="@+id/back"
        style="@style/BackIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/backIcon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:layout_constraintVertical_bias="0.30">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                style="@style/header"
                android:text="@string/start_journey"
            />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxBackgroundColor="@color/colorLight"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:errorEnabled="true"
                app:boxStrokeErrorColor="#FFFFFF"
                app:errorTextColor="@color/colorPrimaryDark">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/enterName"
                    android:hint="@string/enterName"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/e_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxBackgroundColor="@color/colorLight"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                >

                <EditText
                    android:id="@+id/emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxBackgroundColor="@color/colorLight"
                app:errorEnabled="true"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:errorEnabled="true"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxBackgroundColor="@color/colorLight">

                <EditText
                    android:id="@+id/eText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/date_of_birth"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/date_of_birth"
                    android:inputType="date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password2" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView9"
                style="@style/ContentDesign"
                android:layout_marginTop="16dp"
                android:text="@string/privacy_policy"
                app:layout_constraintBottom_toTopOf="@+id/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <Button
                android:id="@+id/sign_up"
                style="@style/ButtonDesign"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3"
                app:layout_constraintVertical_bias="0.59000003" />
            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/do_have_an_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>